[package]
name = "fantasy-frc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
ts-rs = "7.0"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.33.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
tower-http = { version = "0.5.0", features = ["cors"] }
openssl = { version = "0.10", features = ["vendored"] }
dotenv = "0.15.0"
